@@ -3,7 +3,8 @@ Cascading Change Log
 unreleased
 
   Renamed c.p.PipeAssembly to c.p.SubAssembly to better reflect its purpose, which is to encapuslate reusable
-  pipe assemblies in the same manner as a sub-process or sub-routine.
+  pipe assemblies in the same manner as a sub-process or sub-routine. A temporary c.p.PipeAssembly class has been
+  provided for backwards compatibility.
 
   Fixed bug where c.t.TapCollector would throw an NPE if a custom Tap was not using paths.
 
